align top menu correctly

--- a/Snow/stylesheets/styles.css
+++ b/Snow/stylesheets/styles.css
@@ -359,7 +359,7 @@ footer { font-family: 'Open Sans', sans-serif; background: #292f39; font-size: 1
 		position: absolute;
 		height: 1px;
 		width: 100%;
-		top: 77px;
+		top: 80px;
 		left: 0;
 		background: #424750;  
 	}
